--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^4.1.17",
     "git": "^0.1.5",
-    "next": "10.1.3",
+    "next": "^10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
